--- a/views/vue_productos.html
+++ b/views/vue_productos.html
@@ -112,9 +112,9 @@
                         {id_all:'v-pills-home', id: 'v-pills-cheescakes', nombre: 'CHEESCAKE DE FRESA', categoria: 'CHEESCAKES', sabor: 'FRESAS HORNEADAS', precio: '', imagen: ruta + 'cheescakes/CHEESCAKE-DE-FRESAS-HORNEADAS-1.jpg', visible: true},
                     ],
                     OTROS: [
-                        {id_all:'v-pills-home', id: 'v-pills-otros', nombre: 'CREMA CHANTILLY', categoria: 'OTROS', sabor: 'FRESA MELOCOTON', precio: '', imagen: ruta + 'tortas/TORTA-CREMA-CHANTILLY-FRESAS-MELOCOTON-0.jpg', visible: true},
-                        {id_all:'v-pills-home', id: 'v-pills-otros', nombre: 'CHEESCAKE DE FRESA', categoria: 'OTROS', sabor: 'FRESAS HORNEADAS', precio: '', imagen: ruta + 'cheescakes/CHEESCAKE-DE-FRESAS-HORNEADAS-1.jpg', visible: true},
-                        {id_all:'v-pills-home', id: 'v-pills-otros', nombre: 'POSTRE PROFITEROLES', categoria: 'OTROS', sabor: '', precio: '', imagen: ruta + 'postres/POSTRE-PROFITEROLES-PERSONAL-0.jpg', visible: true},
+                        {id_all:'v-pills-home', id: 'v-pills-otros', nombre: 'BRAZO DE REINA', categoria: 'OTROS', sabor: 'FRESAS', precio: '', imagen: ruta + 'otros/BRAZO-DE-REINA-FRESAS.jpg', visible: true},
+                        {id_all:'v-pills-home', id: 'v-pills-otros', nombre: 'GOLFEADO', categoria: 'OTROS', sabor: '', precio: '', imagen: ruta + 'otros/GOLFEADO.jpg', visible: true},
+                        {id_all:'v-pills-home', id: 'v-pills-otros', nombre: 'CACHITO', categoria: 'OTROS', sabor: '', precio: '', imagen: ruta + 'otros/CACHITO.jpg', visible: true},
                     
                     ],
                     MANJARES: 'ARRAY MA',
