--- a/views/vw_about.html
+++ b/views/vw_about.html
@@ -1,14 +1,19 @@
+<style>
+    .cuadro{
+        background: #f5fffb24;
+    }
+</style>
+
 <!-- Start About -->
 	<div class="about-section-box">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-6 col-md-6 col-sm-12 text-center">
+			<div  class="cuadro row">
+				<div class="cuadro col-lg-6 col-md-6 col-sm-12 text-center">
 					<div class="inner-column">
-						<h1>Hola soy una vista <span>Aqui descrip</span></h1>
-						<h4>Pequeña historia</h4>
-						<p><b>Tentempié es la honda </b>Mejorar el enfoque del texto sobre la imagen </p>
-						<p>Sed semper orci sit amet porta placerat. Etiam quis finibus eros. Sed aliquam metus lorem, a pellentesque tellus pretium a. Nulla placerat elit in justo vestibulum, et maximus sem pulvinar.</p>
-						<a class="btn btn-lg btn-circle btn-outline-new-white" href="#">+Información</a>
+                                            <h1 class="">Postres y Almuerzos Personalízados <span>a tu gusto</span></h1>
+						<h4 class="">Queremos complacerte, elige con sabor y combinación deliciosa y permite que seamos tu compañero para esa ocasión especial</h4>
+                                                
+						<a class="btn btn-lg btn-circle btn-outline-new-white" href="#contacto">+Información</a>
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-12" style="padding-top: 25px">
