--- a/views/vw_about.html
+++ b/views/vw_about.html
@@ -10,7 +10,7 @@
 			<div  class="cuadro row">
 				<div class="cuadro col-lg-6 col-md-6 col-sm-12 text-center">
 					<div class="inner-column">
-                                            <h1 class="">Postres y Almuerzos Personalízados <span>a tu gusto</span></h1>
+                                            <h1 class="">Postres y Almuerzos Personalizados <span>a tu gusto</span></h1>
 						<h4 class="">Queremos complacerte, elige con sabor y combinación deliciosa y permite que seamos tu compañero para esa ocasión especial</h4>
                                                 
 						<a class="btn btn-lg btn-circle btn-outline-new-white" href="#contacto">+Información</a>
